@@ -1,13 +1,13 @@
-FROM maven:3.8.4-openjdk-17-slim as maven
+FROM maven:3.6.1-jdk-11-slim as maven
 WORKDIR /hserver
 COPY pom.xml pom.xml
 COPY src src
-RUN mvn package
+RUN mvn package --quiet
 
-FROM openjdk:17.0.2
+FROM openjdk:11.0.3-jdk-slim
 WORKDIR /hserver
 COPY --from=maven /hserver/target/hserver-1.0.jar app.jar
 
 EXPOSE 8888
 
-CMD ["java", "-jar", "app.jar"]
+CMD ["java", "-server", "-XX:+UseNUMA", "-XX:+UseParallelGC", "-XX:+AggressiveOpts", "-Dio.netty.buffer.checkBounds=false", "-Dio.netty.buffer.checkAccessible=false", "-Dio.netty.iouring.iosqeAsyncThreshold=32000", "-jar", "app.jar"]
